# AI-Powered-Intelligent-Candidate-Discovery-System-ICDS-

./: .env.example  .gitignore  Makefile  QUICKSTART.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup_and_run.bat  setup_and_run.sh
api/: main.py
config/: default.yaml
dashboard/: app.py
notebooks/: analysis.py
output/: submission.csv
scripts/: embed.py  rank.py  run_pipeline.py  validate_submission.py
src/redrob_ranker/: __init__.py  behavioral_scorer.py  config.py  data_models.py  embedding_engine.py  evaluation.py  integrity_engine.py  loading.py  ranking_pipeline.py  reasoning_engine.py  semantic_scorer.py  structural_scorer.py  utils.py
tests/: test_behavioral.py  test_integrity.py  test_pipeline.py  test_structural.py
